# equity-multifactor-platform

./: .env.example  .gitignore  pyproject.toml  requirements.txt  run_backtest.py  setup.py  test_six_factor_integration.py
config/: data_config.yaml  strategy_config.yaml
src/data/: cache.py  connectors.py
src/factors/: __init__.py  base.py  compositor.py  growth.py  momentum.py  normalizer.py  quality.py  size.py  value.py  volatility.py
src/utils/: date_utils.py  exceptions.py  logging_config.py
streamlit_app/: app.py
tests/integration/: test_factor_pipeline.py
tests/unit/: test_basic.py  test_compositor.py  test_growth.py  test_momentum.py  test_normalizer.py  test_quality.py  test_size.py  test_value.py  test_volatility.py
